# CANoeDLL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
Includes/: KeyGenAlgoInterfaceEx.h
Sources/: capl_common.cpp  capl_common.h  capldll.cpp  capldll_x64.def  crypto_canoedll.cpp  cryptodll.cpp  parseflashfile.cpp  seednkey_sls.cpp
Tests/: capldll_selftest.cpp
